--- a/Buoi20/weather-app/package.json
+++ b/Buoi20/weather-app/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@reduxjs/toolkit": "^1.8.1",
+    "antd": "^4.19.5",
     "axios": "^0.26.1",
     "cra-template": "1.1.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^7.2.8",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
